Add querying changes by significance
